# mkdocs-plugins

./: .gitignore  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
smp/: __init__.py  meta.py  slugify.py  tags.py  toc.py
