[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[project]
authors = [{email = "13601121148@163.com", name = "Symowl"}]
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["mkdocs", "pypinyin"]
dynamic = ["description", "version"]
name = "smp"
readme = "README.md"
requires-python = ">=3.6"

[project.urls]
Source = "https://github.com/symowl/mkdocs-plugins"
"源代码" = "https://gitee.com/symowl/mkdocs-plugins"
